# cpp20-modules-sample-app

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitmodules  .project  README.md
src/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts  test_build.sh  tmp_build.sh
src/gradle/wrapper/: gradle-wrapper.properties
src/impl/: main.cpp  std.core.cppm  std.io.cppm  tmp.cpp  tmp.cppm  tmp_impl.cpp  tmp_impl2.cpp
src/modules/asio/: asio.patch  module.gradle
src/sample_app/: main.cpp
src/sample_app/tmp/: tmp_impl.cpp
src/valve_controller/: main.cpp  module.gradle
src/valve_controller/tmp/: module.gradle
